--- a/doc/sft-app-api/finance/1001.md
+++ b/doc/sft-app-api/finance/1001.md
@@ -5,25 +5,24 @@
     callback => 'http://cb'              // 回调
     acct_name => '周超',                 // 账户名称
     acct_no   => '6226882100198883',    // 账号
-    bank_no   => '联行号'                // 联行号
-    bank_name => '开户行名称'             // 开户行名称
+    bank_code => '银行代码',             //  ICCB CMB
+
+    //////////////////////////////
+    // 可选字段
+    //////////////////////////////
     id_no     => '430681198212302914',  // 身份证号
     phone     => '18874881230',         // 选填
     checkcode => '888888',              // 短信校验码(optional)
+    cvv       => '030',                 // optional
+    expire    => '0905'                 // optional
 }
 ```
 应答
 ```javascript
 {
-  head => {
-    tcode   => '1001',        // 认证
-    acc_id  => '99990001',    //
-    ssn     => 'NNNNNN'       //
-    tdate   => '20141212',    //
-    ttime   => '121212',      //
-  },
-  body => {
-    resp_code => '000000'     // 成功
-  }
+    resp_code => '000000',     // 成功
+    sft_ssn   => 'NNNNNN',
+    sft_tdate => 'YYYYMMDD',
+    sft_ttime => 'HHMMSS',
 }
 ```
