--- a/doc/sft-app-api/finance/1002.md
+++ b/doc/sft-app-api/finance/1002.md
@@ -3,16 +3,22 @@
 ```javascript
 {
     count => 2,  // 总笔数
+    callback => 'http://app.com/sft/callback',
     records => [
       {
         idx      => 1                      // 顺序号
         acct_name => '周超',                 // 账户名称
         acct_no   => '6226882100198883',    // 账号
-        bank_no   => '联行号'                // 联行号
-        bank_name => '开户行名称'             // 开户行名称
+        bank_code => 'CCB',                 // 银行代码
+
+        //////////////////////////////
+        // 可选
+        //////////////////////////////
         id_no     => '430681198212302914',  // 身份证号
         phone     => '18874881230',         // 选填
-        checkcode => '888888',              // 短信校验码
+        checkcode => '888888',              // 短信校验码(optional)
+        cvv       => '030',                 // optional
+        expire    => '0905'                 // optional
       },
       {
         ...
@@ -27,10 +33,18 @@
       {
         idx     => 1,           //
         resp_code => '000000'     // 成功
+
+        sft_ssn   => 'NNNNNN',
+        sft_tdate => 'YYYYMMDD',
+        sft_ttime => 'HHMMSS',
       },
       {
         idx     => 2,           //
         resp_code => '000000'     // 成功
+
+        sft_ssn   => 'NNNNNN',
+        sft_tdate => 'YYYYMMDD',
+        sft_ttime => 'HHMMSS',
       }
     ]
 }
