--- a/doc/sft-app-api/finance/3002.md
+++ b/doc/sft-app-api/finance/3002.md
@@ -2,6 +2,7 @@
 请求
 ```javascript
 {
+    callback => 'http://app.com/sft/callback'
     count => 100, // 总笔数
     total => 15000, // 总金额
     records => [
@@ -11,9 +12,8 @@
         acct_cat  => '1',
         acct_name => '周超',
         acct_no   => '6226882100198883',
-        bank_no   => '联行号'
-        bank_name => '开户行名称'
-        pay_memo  => '付款备注'
+        bank_code => 'ccb',
+        pay_memo  => '付款备注',  // 付款备注
       },
       ...
     ]
@@ -27,23 +27,22 @@
     process => 0    // 处理中
     records => [
       {
-        index => 0
+        idx => 1
         resp_code => '000000', // 成功
-        sft_ssn => 'NNNNNN'
+
+        sft_ssn   => 'NNNNNN'
         sft_tdate => 'YYYYMMDD',
         sft_ttime => 'HHMMSS',
+      },
+      ...
+      {
+        idx => 99,
+        resp_code => '000000', // 成功
 
-        tamt  => '9999',
-        acct_cat => '1',
-        acct_name => '周超',
-        acct_no   => '6226882100198883',
-        bank_no   => '联行号'
-        bank_name => '开户行名称'
-        },
-        ...
-        {
-
-        }
+        sft_ssn   => 'NNNNNN'
+        sft_tdate => 'YYYYMMDD',
+        sft_ttime => 'HHMMSS',
+      }
     ]
-
+}
 ```
