--- a/doc/sft-app-api/finance/1001.md
+++ b/doc/sft-app-api/finance/1001.md
@@ -5,7 +5,7 @@
     callback => 'http://cb'              // 回调
     acct_name => '周超',                 // 账户名称
     acct_no   => '6226882100198883',    // 账号
-    bank_code => '银行代码',             //  ICCB CMB
+    bank_code => 'CCB',             //  ICCB CMB
 
     //////////////////////////////
     // 可选字段
