--- a/doc/sft-app-api/finance/3002.md
+++ b/doc/sft-app-api/finance/3002.md
@@ -24,7 +24,7 @@
 {
     success => 99,  // 成功笔数
     fail => 1,      // 失败笔数
-    process => 0    // 处理中
+    process => 0,    // 处理中
     records => [
       {
         idx => 1
