--- a/doc/sft-app-api/finance/3002.md
+++ b/doc/sft-app-api/finance/3002.md
@@ -7,7 +7,7 @@
     total => 15000, // 总金额
     records => [
       {
-        index     => 0,
+        idx       => 1,
         tamt      => '9999',
         acct_cat  => '1',
         acct_name => '周超',
