--- a/doc/sft-app-api/query/1012.md
+++ b/doc/sft-app-api/query/1012.md
@@ -2,6 +2,9 @@
 请求
 ```javascript
 {
+
+  // 原接入方的流水号
+  
   ssn => 'NNNNNN',
   tdate => 'YYYYMMDD',
   ttime => 'HHMMSS',
@@ -22,7 +25,7 @@
       {
         idx     => 1,           //
         resp_code => '000000'     // 成功
-        
+
         sft_ssn   => 'NNNNNN',
         sft_tdate => 'YYYYMMDD',
         sft_ttime => 'HHMMSS',
