--- a/doc/sft-app-api/query/3011.md
+++ b/doc/sft-app-api/query/3011.md
@@ -3,7 +3,7 @@
 ```javascript
 // 请求
 {
-  // 原交易的
+  // 原接入方的流水号
   ssn   => 'NNNNNN'
   tdate => 'YYYYMMDD',
   ttime => 'HHMMSS',
@@ -12,6 +12,7 @@
 应答
 ```javascriipt
 {
+  
     resp_code => '000000', // 成功
 
     sft_ssn   => 'NNNNNN'
