updated for new file

--- a/doc/sft-app-api/query/3012.md
+++ b/doc/sft-app-api/query/3012.md
@@ -15,7 +15,7 @@
     process => 1,
     records => [
       {
-        index => 1,
+        idx => 1,
         resp_code => '000000', // 成功
 
         // 平台流水号
@@ -25,7 +25,7 @@
       }
       ...
       {
-        index => 95,
+        idx => 95,
         resp_code => '000000', // 成功
 
         // 平台流水号
